--- a/2022Spring-Mobile/Mobile_ICP9/app/src/main/AndroidManifest.xml
+++ b/2022Spring-Mobile/Mobile_ICP9/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ICP9">
         <activity
+            android:name=".summary"
+            android:exported="false" />
+        <activity
             android:name=".menu"
             android:exported="true">
             <intent-filter>
@@ -20,8 +23,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
